--- a/Exercises/Introductory/2013-08-12-DTK-View-String.Rmd
+++ b/Exercises/Introductory/2013-08-12-DTK-View-String.Rmd
@@ -1,7 +1,6 @@
 ---
-title: "Strings and Object Names"
-author: "DTK"
-date: "August 12, 2014"
+probAuthor: "DTK"
+probDate: "August 12, 2014"
 output: html_document
 description: Strings versus object names
 tags: 
