--- a/CourseNotes/GraphicsConstructDeconstruct/Glyphs.Rmd
+++ b/CourseNotes/GraphicsConstructDeconstruct/Glyphs.Rmd
@@ -3,14 +3,11 @@ output:
   html_document:
     css: ~/KaplanFiles/DCF-2014/CSS/DCF-style.css
     fig_caption: yes
-    toc: yes
+    toc: no
 ---
 
 ```{r child="/Users/kaplan/KaplanFiles/DCF-2014/CSS/DCF-common.Rmd"}
 ```
-
-
-(Some color palettes](xhttp://learnr.wordpress.com/2009/04/15/ggplot2-qualitative-colour-palettes/)
 
 You have already seen some of the [basic types of graphs](../GraphicsConstructDeconstruct/DraftNarrative.html).  These notes are about the underlying similarities and commonalities of the various graph types.  Recognizing these can help you design graphics that serve your specific purpose in displaying data. 
 
@@ -245,4 +242,6 @@ geom_bar(stat='identity',position="dodge") +
 
 A graphical attribute of bar color has been added.  The color is set by the "Smoking Status" variable.   A guide to the relatonship between Smoking Status and color has been added. 
 
+```{r child="../../CSS/DisqusTemplate.Rmd"}
+```
 
