--- a/Drill/Week-6.Rmd
+++ b/Drill/Week-6.Rmd
@@ -118,3 +118,7 @@ What should you report as the confidence interval?
 `r I(g(finish=TRUE))`
 
 `r I(endProblem())`
+
+```{r child="../../CSS/DisqusTemplate.Rmd"}
+```
+
