--- a/Exercises/Introductory/2013-08-12-DTK-Seatbelts.Rmd
+++ b/Exercises/Introductory/2013-08-12-DTK-Seatbelts.Rmd
@@ -1,7 +1,7 @@
 ---
-title: "Seatbelts"
-author: "DTK"
-date: "August 12, 2014"
+probTitle: "Seatbelts"
+probAuthor: "DTK"
+probDate: "August 12, 2014"
 output: html_document
 description: identifying cases and variables
 tags: 
